# Nimble

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
src/: CMakeLists.txt  allocator.h  ambient_occlusion.cpp  ambient_occlusion.h  application.cpp  application.h  bloom.cpp  bloom.h  buffer_linear_allocator.h  camera.cpp  camera.h  constants.h  csm.cpp  csm.h  debug_draw.cpp  debug_draw.h  deferred_shading_renderer.cpp  deferred_shading_renderer.h  demo_loader.cpp  demo_loader.h  depth_of_field.cpp  depth_of_field.h  deque.h  entity.h  final_composition.cpp  final_composition.h  forward_renderer.cpp  forward_renderer.h  framebuffer_group.h  g_buffer_renderer.cpp  g_buffer_renderer.h  generated_shader_library.cpp  generated_shader_library.h  generic_shader_library.cpp  generic_shader_library.h  geometry.h  geometry_shader_library.cpp  geometry_shader_library.h  glad.c  glad.h  (+79 more)
src/graph/: clustered_forward_graph.json  deferred_graph.json  deferred_graph_ssr.json  deferred_graph_with_ssr.json  forward_graph.json  pcf_directional_light_graph.json  pcf_point_light_graph.json  pcf_spot_light_graph.json  tiled_deferred_graph.json  tiled_forward_graph.json
src/graphs/: forward_render_graph.cpp  forward_render_graph.h  pcf_directional_light_render_graph.cpp  pcf_directional_light_render_graph.h  pcf_point_light_render_graph.cpp  pcf_point_light_render_graph.h  pcf_render_graph.cpp  pcf_render_graph.h  pcf_shadow_render_graph.cpp  pcf_shadow_render_graph.h  pcf_spot_light_render_graph.cpp  pcf_spot_light_render_graph.h
src/nodes/: adaptive_exposure_node.cpp  adaptive_exposure_node.h  average_luminance_node.cpp  average_luminance_node.h  bloom_node.cpp  bloom_node.h  chromatic_aberration_node.cpp  chromatic_aberration_node.h  clustered_deferred_node.cpp  clustered_deferred_node.h  clustered_forward_node.cpp  clustered_forward_node.h  clustered_light_culling_node.cpp  clustered_light_culling_node.h  color_grade_node.cpp  color_grade_node.h  copy_node.cpp  copy_node.h  cubemap_skybox_node.cpp  cubemap_skybox_node.h  deferred_node.cpp  deferred_node.h  depth_of_field_node.cpp  depth_of_field_node.h  depth_prepass_node.cpp  depth_prepass_node.h  film_grain_node.cpp  film_grain_node.h  forward_node.cpp  forward_node.h  forward_render_node.cpp  forward_render_node.h  fxaa_node.cpp  fxaa_node.h  g_buffer_node.cpp  g_buffer_node.h  hiz_node.cpp  hiz_node.h  motion_blur_node.cpp  motion_blur_node.h  (+32 more)
src/probe_renderer/: bruneton_probe_renderer.cpp  bruneton_probe_renderer.h
src/probe_renderer/bruneton_sky_model/: bruneton_sky_model.cpp  bruneton_sky_model.h  bruneton_sky_model_constants.h  texture_buffer.cpp  texture_buffer.h
src/shader/: csm_vs.glsl  cubemap_fs.glsl  debug_draw_fs.glsl  debug_draw_vs.glsl  deferred_fs.glsl  deferred_vs.glsl  g_buffer_fs.glsl  g_buffer_vs.glsl  irradiance_fs.glsl  latlong_fs.glsl  latlong_vs.glsl  pbr_fs.glsl  pbr_vs.glsl  pssm_vs.glsl  quad_fs.glsl  vs.glsl
src/shader/bruneton_sky_model/: env_map_fs.glsl  env_map_vs.glsl
src/shader/bruneton_sky_model/initial/: copy_inscatter_1_cs.glsl  copy_inscatter_n_cs.glsl  copy_irradiance_cs.glsl  inscatter_1_cs.glsl  inscatter_n_cs.glsl  inscatter_s_cs.glsl  irradiance_1_cs.glsl  irradiance_n_cs.glsl  precompute_common.glsl  transmittance_cs.glsl
src/shader/clustered/: light_culling_cs.glsl  precompute_clusters_cs.glsl
src/shader/common/: depth_conversion.glsl  gaussian_blur.glsl  helper.glsl  material.glsl  mesh_vertex_attribs.glsl  normal_packing.glsl  structures.glsl  uniforms.glsl
src/shader/csm/: csm.glsl
src/shader/deferred/: clustered_deferred_fs.glsl  deferred_fs.glsl  deferred_vs.glsl  tiled_deferred_fs.glsl
src/shader/environment/: cubemap_vs.glsl
src/shader/forward/: clustered_forward_fs.glsl  forward_fs.glsl  forward_vs.glsl  tiled_forward_fs.glsl
src/shader/fragment_func/: orca.glsl  san_miguel.glsl
src/shader/g_buffer/: g_buffer_fs.glsl  g_buffer_vs.glsl
src/shader/pbr/: pbr.glsl  precompute_fs.glsl  prefilter_fs.glsl
src/shader/post_process/: copy_fs.glsl  debug_fs.glsl  downsample_fs.glsl  filters_fs.glsl  fullscreen_quad_vs.glsl  gaussian_blur_fs.glsl  quad_fs.glsl  stop_nans.glsl  stop_nans_fs.glsl  tone_map_fs.glsl
src/shader/post_process/adaptive_exposure/: adapted_luminance_fs.glsl  average_luminance_cs.glsl  compute_luminance_cs.glsl  copy_luminance_fs.glsl  initial_luminance_fs.glsl
src/shader/post_process/bloom/: bright_pass_fs.glsl  composite_fs.glsl  downsample_fs.glsl  upsample_fs.glsl
src/shader/post_process/chromatic_aberration/: chromatic_aberration_fs.glsl
src/shader/post_process/color_grade/: color_grade_fs.glsl
src/shader/post_process/depth_of_field/: coc_fs.glsl  composite_fs.glsl  computation_fs.glsl  downsample_fs.glsl  fill_fs.glsl  filters_fs.glsl
src/shader/post_process/film_grain/: film_grain_fs.glsl
src/shader/post_process/final_composition/: final_composition_fs.glsl
src/shader/post_process/fxaa/: fxaa_fs.glsl
src/shader/post_process/hiz/: copy_fs.glsl  hiz_copy_fs.glsl  hiz_fs.glsl
src/shader/post_process/luminance/: luminance_fs.glsl
src/shader/post_process/motion_blur/: fs.glsl  motion_blur_fs.glsl  vs.glsl
src/shader/post_process/ssao/: ssao_blur_fs.glsl  ssao_fs.glsl  ssao_vs.glsl
src/shader/post_process/ssr/: reflection_fs.glsl  ssr_cs.glsl  ssr_fs.glsl  ssr_v2_fs.glsl
src/shader/post_process/taa/: taa_fs.glsl  taa_hist_fs.glsl
src/shader/post_process/tone_mapping/: tone_mapping_fs.glsl
src/shader/post_process/vignette/: vignette_fs.glsl
src/shader/post_process/volumetric_light/: volumetric_light_blur_fs.glsl  volumetric_light_fs.glsl  volumetric_light_upscale_fs.glsl
src/shader/shadows/: pcf.glsl  standard_depth_vs.glsl
src/shader/shadows/sampling/: pcf.glsl
src/shader/shadows/shadow_map/: standard_depth_vs.glsl
src/shader/skybox/: cubemap_skybox_fs.glsl  cubemap_skybox_vs.glsl
src/shader/templates/: mesh_fs.glsl  mesh_vs.glsl
src/shader/tiled/: common.glsl  frustum_precompute_cs.glsl  light_culling_cs.glsl  precompute_frustums_cs.glsl  reset_counter_cs.glsl  tiled_light_culling_cs.glsl
(+13 files in other folders)
